[package]
name = "concepts_ch03"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "event"
path = "src/event.rs"

[[bin]]
name = "fib"
path = "src/fib.rs"

[[bin]]
name = "fib_dry"
path = "src/fib_dry.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
